# symbolic-operator-calculus

./: .gitignore  pyproject.toml
docs/: CAUCHY_FACTOR_MELLIN_SEMIPRODUCT_AUDIT.md  FIRST_PIVOT_CLOSURE_GRAPH.md  FIRST_PIVOT_CLOSURE_OBLIGATIONS.yaml  FIRST_PIVOT_COMPLETE_CORRECTION.tex  FIRST_PIVOT_CORRECTION_INTERFACES.md  FIRST_PIVOT_CORRECTION_REFERENCE_MAP.md  FIRST_PIVOT_CORRECTION_ROUTE_DECISION.md  FIRST_PIVOT_CORRECTION_TERM_CATALOG.md  FIRST_PIVOT_CORRECTION_TERM_CATALOG.tex  FIRST_PIVOT_CUSP_ROUTE_ANALYSIS.md  FIRST_PIVOT_EVIDENCE_MANIFEST.yaml  FIRST_PIVOT_LEFT_CORE_CLOSURE.md  FIRST_PIVOT_LEFT_CORE_CLOSURE.tex  FIRST_PIVOT_MELLIN_ROUTE_ANALYSIS.md  FIRST_PIVOT_MINIMAL_CLOSURE_LEMMA.tex  FIRST_PIVOT_MINIMAL_LEMMA_DECISION.md  FIRST_PIVOT_RESULT_INTERFACE_MATRIX.md  FIRST_PIVOT_W12_PLUS_IDENTIFICATION_AUDIT.md  FIRST_SCHUR_PIVOT_CAPABILITY_REPORT.md  FIRST_SCHUR_PIVOT_DERIVATION.tex  LEFT_DILATION_MELLIN_COVARIANCE_DERIVATION.md  LEFT_DILATION_MELLIN_COVARIANCE_DERIVATION.tex  MATHEMATICAL_CONVENTIONS.md  MVP_SCOPE.md  OSCILLATORY_DILATION_SYMBOL_CLASSIFICATION.md  P0B_DOMAINS_ASSUMPTIONS.md  P0_SEMANTIC_SAFETY.md  P1A_MELLIN_SYMBOL_INFRASTRUCTURE.md  PHASE_K5_AUDIT.md  PHASE_K6_END_TO_END_AUDIT.md  PHASE_K7_VISUAL_EXPORT_AUDIT.md  PHASE_K_AUDIT.md  PHASE_L1_DILATION_WIENER_HOPF_SYMBOL.md  PHASE_L2_RELATIVE_WH_OPERATOR_TRACE.md  PHASE_N_AUDIT_FIRST_SCHUR_PIVOT.md  PHASE_O_AUDIT_COMPLETE_CORRECTION.md  PHASE_P1B_CUTOFF_CONTROL.md  PHASE_P1B_FULL_SCHUR_WORD_ADVERSARIAL_REVIEW.md  PHASE_P1B_FULL_SCHUR_WORD_LATEX.md  PHASE_P1B_FULL_SCHUR_WORD_MATH.md  (+25 more)
(+112 files in other folders)
